--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "infinite-react-carousel": "^1.2.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.2.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
